syntax = "proto3"; 
option go_package="/protos/book";
package protos;
import "google/protobuf/wrappers.proto";

message BookResponse {
  string id = 1;
  string author = 2;
  string isbn = 3;
  string title = 4;
  string summary = 5;
}

message Books {
  repeated BookResponse book = 1;
}

message BookRequest {
  string author = 2;
  string isbn = 3;
  string title = 4;
  string summary = 5;
}

message UpdateBookRequest {
  string id = 1;
  BookRequest bookRequest = 2;
}

service BookHandlers {
  // gRPC service information
  rpc CreateBook(BookRequest) returns (BookResponse){};
  rpc GetBooks(google.protobuf.StringValue) returns (Books){};
  rpc UpdateBook(UpdateBookRequest) returns (BookResponse){};
  rpc DeleteBook(google.protobuf.StringValue) returns (google.protobuf.BoolValue){};
}